client/src/css/Profile.css
.profile {
  flex: 0.5;
  border-right: 1px solid var(--twitter-bg);
  min-width: fit-content;
  overflow-y: scroll;
  border-bottom: 1px solid var(--twitter-color);
}
/*Hide scrollbar for chrome,safari*/
.profile::-webkit-scrollbar {
  display: none;
}
/*Hide scrollbar for IE,Edge,Firefox*/
.profile::-webkit-scrollbar {
  -ms-overflow-style: none; /*IE & Edge*/
  scrollbar-width: none; /* FireFox */
}
.profileHeader {
  position: relative;
  top: 0;
  background-color: white;
  z-index: 100;
  /**border: 1px solid var(--twitter-bg);*/
  padding: 15px 20px;
}
.profileHeader > h2 {
  font-size: 20px;
  font-weight: 800;
}
.profileHeader > p {
  margin-top: 10px;
  margin-left: 43px;
  padding: 9px;
  font-size: 22px;
  border: 1px solid var(--twitter-color);
  border-radius: 5px;
  width: 140px;
  box-sizing: border-box;
}
.status__header {
  display: flex;
}
.status__header > h3 {
  margin-top: 8px;
  margin-bottom: 4px;
}
.status__icon {
  color: var(--twitter-color);
  margin-right: 20px;
  cursor: pointer;
}
.status__icon:hover {
  color: blue;
  border-radius: 30px;
}
.profile__coverpic {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}
.profile__coverpic > button {
  background-color: white !important;
  border: 2px solid var(--twitter-color) !important;
  border-color: var(--twitter-color) !important;
  color: var(--twitter-color) !important;
  font-weight: 700 !important;
  font-size: 15px !important;
  text-transform: inherit !important;
  height: 39px !important;
  margin-left: 470px !important;
  border-radius: 20px !important;
  margin-top: 10px !important;
  width: 130px !important;
}
.profile__coverpic > button:hover {
  background-color: var(--twitter-color) !important;
  color: white !important;
}
.profile__coverpic > img {
  width: 600px;
  height: 250px;
}
.coverPic {
  position: relative;
  top: 0;
  left: 0;
}
.profile__user__avatar {
  border-radius: 124px;
  position: absolute;
  top: 211px !important;
  left: 25px !important;
  color: transparent !important;
  width: 26% !important;
  height: 42% !important;
  object-fit: cover !important;
  text-align: center !important;
  text-indent: 10000px !important;
}
.profile__header__userinfo {
  margin-top: 10px;
  margin-left: 35px;
}
.profile__header__username {
  font-weight: 900;
  font-size: 18px;
}
.profile__header__userid {
  margin-top: 6px;
  color: gray;
  font-size: 15px;
}
.profile__header__bio {
  margin-top: 12px;
  font-size: 17px;
}
.profile__header__otherinfo {
  display: flex;
  justify-content: space-evenly;
  margin-left: -68px;
  margin-top: 10px;
  color: gray;
}
.profile__header__otherinfo > span {
  margin-top: 10px;
}
.MuiSvgIcon-fontSizeSmall {
  font-size: 1.25rem;
  margin-top: 4px;
  margin-left: 37px;
}
.otherinfo {
  position: relative;
  top: -4px;
}
.profile__userinteraction {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-left: 35px;
  margin-top: 15px;
  width: 309px;
}
.userinteraction__span {
  margin-left: 9px;
  color: gray;
}
.userinteraction__number {
  font-weight: 700;
  font-size: 17px;
}
.profile__user__tweets__bar {
  display: flex;
  justify-content: space-around;
  margin-top: 30px;
  margin-left: -11px;
  border-bottom: 1px solid var(--twitter-color);
}
.profile__tweets__bar > button {
  background-color: white !important;
  border: none !important;
  color: var(--twitter-color) !important;
  font-weight: 800 !important;
  font-size: 16px !important;
  text-transform: inherit !important;
  margin-left: 10px !important;
}

.profile__tweets__bar :hover {
  color: var(--twitter-color);
  background-color: white;
  border-left: 3px solid var(--twitter-color);
  border-right: 3px solid var(--twitter-color);
}
.profile__tweets__bar__selected {
  border-bottom: 4px solid var(--twitter-color) !important;
  margin-left: 2px;
}
.status__header__tweetcount {
  color: gray;
  margin-left: 55px;
  padding-bottom: 6px;
}
.userInfo_tweets > h3 {
  margin-left: 152px;
  margin-top: 35px;
}
/**manage profile*/
.manage__header__userinfo {
  margin-top: 40px;
  margin-left: 35px;
  width: 600px;
}
.manage__header__userinfo > div > input {
  margin: 10px;
  padding: 10px;
  width: 84%;
  border: none;
  border-bottom: 3px solid var(--twitter-color);
  font-weight: 900;
  font-size: 18px;
}
.manage__header__userinfo > div > input :focus {
  outline: none;
}
.manage__header__userinfo > div > input :hover {
  cursor: pointer;
  color: var(--twitter-bg);
}
.manage__header__username > input:focus {
  outline: none;
}

.manage__header__bio > input:focus {
  outline: none;
}

.manage__header__location > input:focus {
  outline: none;
}

.manage__header__website > input:focus {
  outline: none;
}
.manage__header__birthday {
  display: flex;
}
.manage__header__birthday > input {
  margin: 10px;
  padding: 10px;
  width: 84%;
  border: none;
  border-bottom: 3px solid var(--twitter-color);
  font-weight: 900;
  font-size: 18px;
}
.bday_label {
  display: flex;
  color: rgb(0, 145, 0);
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
}
.bday_label > p {
  margin-top: -25px;
  margin-left: 26px;
}
.manage__header__birthday > input:focus {
  outline: none;
}
.edit_bdate_button {
  background-color: white !important;
  border: none !important;
  color: var(--twitter-color) !important;
  font-weight: 800 !important;
  font-size: 16px !important;
  text-transform: inherit !important;
  margin-left: 10px !important;
}
.manage__user__avatar {
  border-radius: 89px;
  position: absolute;
  top: 208px !important;
  left: 25px !important;
  color: transparent !important;
  width: 25% !important;
  height: 44% !important;
  object-fit: cover !important;
  text-align: center !important;
  text-indent: 10000px !important;
}
.upload_cover {
  display: flex;
}
.coverpic_label {
  margin-top: -25px;
  margin-left: 26px;
}
input[type="file"] {
  display: none;
}
.custom-file-upload {
  color: var(--twitter-color);
  display: inline-block;
  padding: 6px 12px;
  cursor: pointer;
}
input[type="text"] {
  outline: none;
}
@media (max-width: 375px) {
  .profile__coverpic > img {
    width: 322px;
    height: 197px;
  }
}
@media (max-width: 800px) {
  .profile {
    flex: 1.1;
    border-right: 1px solid var(--twitter-bg);
    min-width: -moz-fit-content;
    min-width: fit-content;
    overflow-y: scroll;
    border-bottom: 1px solid var(--twitter-color);
  }
  .profileHeader {
    position: relative;
    top: 0;
    background-color: white;
    z-index: 100;
    padding: 15px 20px;
  }
  .profile__coverpic > img {
    width: 346px;
    height: 197px;
  }
  .profile__user__avatar {
    border-radius: 124px;
    position: absolute;
    top: 211px !important;
    left: 25px !important;
    color: transparent !important;
    width: 23% !important;
    height: 27% !important;
    object-fit: cover !important;
    text-align: center !important;
    text-indent: 10000px !important;
  }
  .profile__coverpic > button {
    background-color: white !important;
    border: 2px solid var(--twitter-color) !important;
    border-color: var(--twitter-color) !important;
    color: var(--twitter-color) !important;
    font-weight: 700 !important;
    font-size: 15px !important;
    text-transform: inherit !important;
    height: 39px !important;
    margin-left: 215px !important;
    border-radius: 20px !important;
    margin-top: 10px !important;
    width: 130px !important;
  }
  .profile__header__userinfo {
    margin-top: -1px;
    margin-left: 18px;
  }
  .profile__header__otherinfo {
    display: grid;
    margin-left: -24px;
    margin-top: 10px;
    color: gray;
    justify-content: flex-start;
  }
  .otherinfo {
    position: relative;
    top: -5px;
    margin-left: 8px;
  }
  .profile__user__tweets__bar {
    display: flex;
    justify-content: space-around;
    margin-top: 30px;
    margin-left: -11px;
    border-bottom: 1px solid var(--twitter-color);
  }
  .userInfo_tweets > h3 {
    margin-left: 47px;
    margin-top: 35px;
  }
  .manage__user__avatar {
    border-radius: 89px;
    position: absolute;
    top: 208px !important;
    left: 25px !important;
    color: transparent !important;
    width: 22% !important;
    height: 44% !important;
    object-fit: cover !important;
    text-align: center !important;
    text-indent: 10000px !important;
  }
  .manage__header__userinfo {
    margin-top: 40px;
    margin-left: 35px;
    width: 600px;
  }
  .manage__header__userinfo > div > input {
    margin: 10px;
    padding: 10px;
    width: 50%;
    border: none;
    border-bottom: 3px solid var(--twitter-color);
    font-weight: 900;
    font-size: 18px;
  }
  .manage_profile_coverpic > img {
    width: 340px;
    height: 197px;
  }
}

